--- a/RWD/website-template-using-bootstrap/index.html
+++ b/RWD/website-template-using-bootstrap/index.html
@@ -9,10 +9,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Responsive Web Design</title>
+    
 </head>
 
 <body class="bg-light">
-    <nav class="navbar navbar-expand-sm fixed-top bg-white text-black text-uppercase fs-4">
+    <nav class="navbar navbar-expand-sm fixed-top bg-white text-black text-uppercase fs-4 position-relative">
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link bg-danger" href="#"><i class="fa fa-bed ml-2"></i>Logo</a>
@@ -26,9 +27,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
             </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link bg-light " href="#">Book Now</a>
-            </li> -->
+            <li class="nav-item" style="position: absolute; right: 5px;">
+                <a class="nav-link bg-light" href="#">Book Now</a>
+            </li>
         </ul>
     </nav>
 
@@ -214,6 +215,7 @@
             </div>
         </div>
     </section>
+   
 
 </body>
 
